// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] uv_9pjq8o6 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-4[data-checked='true'] {
  color: #641cb3;
}

.emotion-4[data-error='true'] {
  color: #b3144d;
}

.emotion-4[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-4 input+svg {
  display: none;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 {
  fill: #d9dadd;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 {
  background: none;
  fill: #8c40ef;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="radio"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-4 emotion-5 uv_17da2jl3"
                    data-checked="false"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      class="uv_17da2jl6"
                      id="«r2»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 1"
                    />
                    <svg
                      class="uv_17da2jl7"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_17da2jl0"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_17da2jl8"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                      for="«r2»"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="radio"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-4 emotion-5 uv_17da2jl3"
                    data-checked="false"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      class="uv_17da2jl6"
                      id="«r6»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 2"
                    />
                    <svg
                      class="uv_17da2jl7"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_17da2jl0"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_17da2jl8"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                      for="«r6»"
                    >
                      Radio 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as a checkbox 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] uv_9pjq8o6 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-4[data-checked='true'] {
  color: #641cb3;
}

.emotion-4[data-error='true'] {
  color: #b3144d;
}

.emotion-4[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-4 input+svg {
  display: none;
}

.emotion-4 label {
  width: 100%;
}

.emotion-4:hover[aria-disabled='false'] uv_9pjq8o5[aria-invalid='false'][aria-checked='false']+uv_9pjq8o3 uv_9pjq8o1 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-4:hover[aria-disabled='false'] uv_9pjq8o5[aria-invalid='false'][aria-checked='true']+uv_9pjq8o3 uv_9pjq8o1 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] uv_9pjq8o5[aria-invalid='false'][aria-checked='mixed']+uv_9pjq8o3 uv_9pjq8o1 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-4 uv_9pjq8o5:focus+uv_9pjq8o3,
.emotion-4 uv_9pjq8o5:active+uv_9pjq8o3 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-4 uv_9pjq8o5[aria-checked='false'] uv_9pjq8o1 {
  fill: #ffffff;
  stroke: #d9dadd;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-testid="checked"
                data-type="checkbox"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_9pjq8o6 emotion-4 emotion-5"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-checked="true"
                    aria-invalid="false"
                    checked=""
                    class="uv_9pjq8o5"
                    id="«rg»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="checked"
                  />
                  <svg
                    class="uv_9pjq8o3"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="uv_9pjq8o1"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                    style="--uv_4k0ekn3: 1;"
                  >
                    <div
                      class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                      style="--uv_4k0ekn3: 1;"
                    >
                      <label
                        class="uv_9pjq8o4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                        for="«rg»"
                      >
                        Checkbox 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as radiofield 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] uv_9pjq8o6 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-4[data-checked='true'] {
  color: #641cb3;
}

.emotion-4[data-error='true'] {
  color: #b3144d;
}

.emotion-4[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-4 input+svg {
  display: none;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 {
  fill: #d9dadd;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] uv_17da2jl6[aria-invalid='true']+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 {
  background: none;
  fill: #8c40ef;
}

.emotion-4 uv_17da2jl6[aria-disabled='false']:active+uv_17da2jl7 uv_17da2jl0 {
  fill: #ffffff;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-testid="checked"
                data-type="radio"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-4 emotion-5 uv_17da2jl3"
                    data-checked="true"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      checked=""
                      class="uv_17da2jl6"
                      id="«rb»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="checked"
                    />
                    <svg
                      class="uv_17da2jl7"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_17da2jl0"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_17da2jl8"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                      for="«rb»"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] uv_17da2jl1,
.emotion-2[data-has-label='true'] uv_9pjq8o6 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-4[data-checked='true'] {
  color: #641cb3;
}

.emotion-4[data-error='true'] {
  color: #b3144d;
}

.emotion-4[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-4 input+svg {
  display: none;
}

.emotion-4 label {
  width: 100%;
}

.emotion-4:hover[aria-disabled='false'] uv_9pjq8o5[aria-invalid='false'][aria-checked='false']+uv_9pjq8o3 uv_9pjq8o1 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-4:hover[aria-disabled='false'] uv_9pjq8o5[aria-invalid='false'][aria-checked='true']+uv_9pjq8o3 uv_9pjq8o1 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] uv_9pjq8o5[aria-invalid='false'][aria-checked='mixed']+uv_9pjq8o3 uv_9pjq8o1 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-4 uv_9pjq8o5:focus+uv_9pjq8o3,
.emotion-4 uv_9pjq8o5:active+uv_9pjq8o3 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-4 uv_9pjq8o5[aria-checked='false'] uv_9pjq8o1 {
  fill: #ffffff;
  stroke: #d9dadd;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <legend
              class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </legend>
            <div
              class="uv_x6hyh50 uv_x6hyh5d"
              style="--uv_3mg8xe0: repeat(1, minmax(0, 1fr)); --uv_3mg8xe1: repeat(1, minmax(0, 1fr)); --uv_3mg8xe2: repeat(1, minmax(0, 1fr)); --uv_3mg8xe3: repeat(1, minmax(0, 1fr)); --uv_3mg8xe4: repeat(1, minmax(0, 1fr)); --uv_3mg8xe5: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="checkbox"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_9pjq8o6 emotion-4 emotion-5"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="uv_9pjq8o5"
                    id="«rl»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 1"
                  />
                  <svg
                    class="uv_9pjq8o3"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="uv_9pjq8o1"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                    style="--uv_4k0ekn3: 1;"
                  >
                    <div
                      class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                      style="--uv_4k0ekn3: 1;"
                    >
                      <label
                        class="uv_9pjq8o4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                        for="«rl»"
                      >
                        Radio 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="checkbox"
                role="button"
                style="--uv_4k0ekn3: 1;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_9pjq8o6 emotion-4 emotion-5"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="uv_9pjq8o5"
                    id="«rp»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 2"
                  />
                  <svg
                    class="uv_9pjq8o3"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="uv_9pjq8o1"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                    style="--uv_4k0ekn3: 1;"
                  >
                    <div
                      class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                      style="--uv_4k0ekn3: 1;"
                    >
                      <label
                        class="uv_9pjq8o4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                        for="«rp»"
                      >
                        Radio 2
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
